<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">ChatRoomSmall</string>
    <string name="log_out">Log out</string>
    <string name="input_message">Input message...</string>
    <string name="wellcome">WELLCOME</string>
    <string name="wellcome1">Wellcome</string>
    <string name="please_enter_your_details">Please enter your details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="login">Login</string>
    <string name="dont_t_have_an_account_sign_in_register">Dont\'t have an account? <b><u>Register</u></b></string>
    <string name="login_in_with_facebook">Login in with Facebook</string>
    <string name="login_in_with_google">Login in with Google</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="back">Back</string>
    <string name="chat_room">CHAT ROOM</string>
    <string name="design_app_chat_by_trong_tin">Design app chat by Trong Tin</string>
    <string name="start_sending_message_in_the_chat_room">Start Sending Message In The Chat Room</string>
    <string name="default_web_client_id">248670839100-tvenrhc4b56p0l39p220m06dfdpfdg5f.apps.googleusercontent.com</string>

    <string name="facebook_app_id">170484502761081</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">df38652cb3df4415b86fce87142a3c62</string>
    <string name="this_is_content_messgage_chat">This is content messgage chat</string>


</resources>